--- a/style.css
+++ b/style.css
@@ -1,86 +1,55 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
-#banner{
-  background: linear-gradient(rgba(0,0,0,0.5),#23225c), url(images/banner.jpg);
+#deel0 {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), #23225c),
+    url(images/banner.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
 }
-.logo{
+.logo {
   width: 140px;
   position: absolute;
   top: 4%;
   left: 10%;
 }
-.banner-text{
+.banner-text {
   text-align: center;
   color: #fff;
-  padding-top: 180px;
+  padding-top: 300px;
 }
-.banner-text h1{
+.banner-text h1 {
   font-size: 130px;
-  font-family: 'Golos Text', sans-serif;
+  font-family: "Golos Text", sans-serif;
 }
-.banner-text p{
+.banner-text p {
   font-size: 20px;
   font-style: italic;
 }
-p{
-  font-family: 'Ubuntu', sans-serif;
+p {
+  font-family: "Ubuntu", sans-serif;
 }
-.banner-btn{
-  margin: 70px auto 0;
-}
-.banner-btn a{
-  width: 150px;
-  text-decoration: none;
-  display: inline-block;
-  margin: 0 10px;
-  padding: 12px 0;
-  color: #fff;
-  border: .5px solid #fff ;
-  position: relative;
-  z-index: 1;
-  transition: color 0.5s;
-}
-.banner-btn a span{
-  width: 0;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: #fff;
-  z-index: -1;
-  transition: 0.5s;
-}
-.banner-btn a:hover span{
-  width: 100%;
-}
-.banner-btn a:hover{
-  color: black;
-}
-#sidenav{
+#sidenav {
   width: 250px;
   height: 100vh;
   position: fixed;
   right: -250px;
   top: 0;
   background: #23225c;
-  z-index: 2;
+  z-index: 500;
   transition: 0.5s;
 }
-nav ul li{
+nav ul li {
   list-style: none;
   margin: 50px 20px;
-
 }
-nav ul li a{
+nav ul li a {
   text-decoration: none;
   color: white;
 }
-#menubtn{
+#menubtn {
   width: 50px;
   height: 50px;
   background: #23225c;
@@ -89,22 +58,22 @@ nav ul li a{
   right: 30px;
   top: 20px;
   border-radius: 3px;
-  z-index: 3;
+  z-index: 600;
   cursor: pointer;
 }
-#menubtn img{
+#menubtn img {
   width: 20px;
   margin-top: 15px;
 }
-#feature{
+#deel1 {
   width: 100%;
   padding: 70px 0;
 }
-.title-text{
+.title-text {
   text-align: center;
   padding-bottom: 70px;
 }
-.title-text p{
+.title-text p {
   margin: auto;
   font-size: 20px;
   color: #23225c;
@@ -113,11 +82,11 @@ nav ul li a{
   z-index: 1;
   display: inline-block;
 }
-.title-text p::after{
-  content: '';
+.title-text p::after {
+  content: "";
   width: 50px;
   height: 35px;
-  background: linear-gradient(#23225c,#fff);
+  background: linear-gradient(#23225c, #fff);
   position: absolute;
   top: -20px;
   left: 0;
@@ -126,10 +95,10 @@ nav ul li a{
   border-top-left-radius: 35px;
   border-bottom-right-radius: 35px;
 }
-.title-text h1{
+.title-text h1 {
   font-size: 50px;
 }
-.feature-box{
+.feature-box {
   width: 80%;
   margin: auto;
   display: flex;
@@ -137,75 +106,84 @@ nav ul li a{
   align-items: center;
   text-align: center;
 }
-.features{
-  flex-basis: 50%;
+.features {
+  flex-basis: 40%;
+  text-align: left;
 }
-.features-img{
+.features-img {
   flex-basis: 50%;
   margin: auto;
 }
-.features-img img{
+.features-img img {
   width: 70%;
   border-radius: 10px;
 }
-.features h1{
+.features h1 {
   text-align: left;
   margin-bottom: 10px;
   font-weight: 100;
   color: #23225c;
 }
-.features-desc{
+.features-desc {
   display: flex;
-  align-items: center;
+  align-items: left;
   margin-bottom: 40px;
 }
-.feature-text p{
+.feature-text p {
   padding: 0 20px;
   text-align: initial;
 }
-#service{
+#deel2 {
   width: 100%;
   padding: 70px 0;
-  background:#efefef;
+  background: #efefef;
 }
-.service-box{
+.service-box {
   width: 80%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   margin: auto;
 }
-.single-service{
+.single-service {
   flex-basis: 48%;
   text-align: center;
   border-radius: 7px;
   margin-bottom: 20px;
   color: white;
 }
-.single-service img{
-  width: 100%;
-  border-radius: 7px;
-}
-#testimonial{
+#deel3 {
   width: 100%;
   padding: 70px 0;
   background: white;
 }
-#footer{
+#deel4 {
   width: 100%;
   padding: 70px 0;
-  background:#efefef;
+  background: #efefef;
 }
-#laatst{
+#deel5 {
   width: 100%;
   padding: 70px 0;
   background: white;
 }
-#map1{ 
+#map1 {
   height: 500px;
   width: 750px;
 }
-#arcgistest{
+#arcgistest {
+  height: 500px;
+  width: 750px;
+}
+#openlayerkaart {
+  width: 100%;
+  height: 500px;
+}
+#maplibrekaart {
+  width: 100%;
+  height: 500px;
+}
+#CartoDB_DarkMatter {
   height: 500px;
   width: 750px;
 }
